# RLT

./: .gitignore  README.md
.codex/: inspect_torch_pickle.py
docs/: groot_teleop_integration.md  verified_groot_prefix_rlt_pipeline.md
groot_rlt/: README.md  pyproject.toml
groot_rlt/src/groot_rlt/: cli.py
groot_rlt/src/groot_rlt/integration/: artifact_lineage.py  lerobot_v3_offline_features.py  lerobot_v3_replay_bridge.py  nero_action_contract.py  prefix_cache_contract.py
groot_rlt/src/groot_rlt/representation/: audit_rl_token_checkpoint.py  encoder_artifact.py  evaluate_true_prefix_holdout.py  evaluate_vl_embedding_autoencoder_ablation.py  extract_true_prefix_holdout.py  train_vl_embedding_autoencoder.py  verify_prefix_parity.py  visualize_rl_token_umap.py
groot_rlt/src/groot_rlt/serving/: groot_feature_policy.py  groot_feature_server.py
groot_rlt/tests/: test_ablation_cache_contract.py  test_audit_rl_token_checkpoint.py  test_cli.py  test_encoder_artifact.py  test_feature_encoder_contract.py  test_lerobot_v3_offline_features.py  test_lerobot_v3_replay_bridge.py  test_nero_action_contract.py  test_true_prefix_holdout.py  test_vl_embedding_autoencoder.py
rlt_online_rl/: README.md
rlt_online_rl/scripts/: run_online_rl.py  train_bridge_replay.py
rlt_online_rl/src/rlt_online_rl/: config.py  inference.py  networks.py  offline_bridge_training.py  replay.py  trainer.py
rlt_online_rl/tests/: test_config.py  test_groot_compat.py  test_machine_a_lineage.py  test_networks.py  test_offline_bridge_training.py  test_replay.py  test_trainer.py
(+1 files in other folders)
